hamonikr-system (7.4.6) stable; urgency=medium

  [Kevin Kim]
  * Changed absolute path in video2gif.sh

 -- HamoniKR <pkg@hamonikr.org>  Wed, 08 Nov 2023 20:29:01 +0900

hamonikr-system (7.4.5) stable; urgency=medium

  [Kevin Kim]
  * Fixed wrong path when copy custom cinnamon resources

 -- HamoniKR <pkg@hamonikr.org>  Thu, 02 Nov 2023 21:54:32 +0900

hamonikr-system (7.4.4) stable; urgency=medium

  [Kevin Kim]
  * Updated NeverAutoRemove list
   - Tested on kumkang

 -- HamoniKR <pkg@hamonikr.org>  Thu, 02 Nov 2023 21:49:45 +0900

hamonikr-system (7.4.3) stable; urgency=medium

  [Kevin Kim]
  * Fixed adjustment scripts error message
   - copy cinnamon resource
   - copy lightdm login theme

 -- HamoniKR <pkg@hamonikr.org>  Thu, 02 Nov 2023 21:17:24 +0900

hamonikr-system (7.4.2) stable; urgency=medium

  [Kevin Kim]
  * Fixed gpg key warning when apt-get update

 -- HamoniKR <pkg@hamonikr.org>  Thu, 02 Nov 2023 18:17:58 +0900

hamonikr-system (7.4.1) stable; urgency=medium

  [Kevin Kim]
  * Fixed update manager can't run

 -- HamoniKR <pkg@hamonikr.org>  Thu, 02 Nov 2023 14:44:27 +0900

hamonikr-system (7.4.0) stable; urgency=medium

  [Kevin Kim]
  * Fixed script permission error

 -- HamoniKR <pkg@hamonikr.org>  Thu, 02 Nov 2023 10:28:37 +0900

hamonikr-system (7.3.9) stable; urgency=medium

  [Kevin Kim]
  * Update depend section
   - Add ffmpeg for recording applet
  * Update latest cinnamon translation
   - recording applet

 -- HamoniKR <pkg@hamonikr.org>  Wed, 01 Nov 2023 15:44:08 +0900

hamonikr-system (7.3.8) stable; urgency=medium

  [Kevin Kim]
  * Update apt autoremove pkg list
   - Change after upgrade test

 -- HamoniKR <pkg@hamonikr.org>  Wed, 01 Nov 2023 13:54:40 +0900

hamonikr-system (7.3.7) stable; urgency=medium

  [Kevin Kim]
  * Add modified cinnamon-session-cinnamon
   - for user level cmd before start cinnamon

 -- HamoniKR <pkg@hamonikr.org>  Tue, 31 Oct 2023 21:51:34 +0900

hamonikr-system (7.3.6) stable; urgency=medium
